Fix social link spacing

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -200,6 +200,7 @@ div.job-posting.full {
       width:34%;
       text-align:right;
       margin-right: 8px;
+      padding-right: 8px;
     }
     .right {
       text-align:center;
@@ -208,6 +209,7 @@ div.job-posting.full {
       margin-right: 8px;
     }
     .center {
+      padding-right:8px;
       text-align:left;
       margin-left: 8px;
     }
